Refactor index.html structure and styles
Signed-off-by: The best <alinajmiq1@gmail.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VILLEGE Image</title>
+    <title></title>
     <style>
         /* إعادة تعيين المسافات */
         * {
@@ -45,3 +45,4 @@
     <img src="w.png" alt=" ">
 </body>
 </html>
+
